# suraksha-ai

./: .env.example  .gitignore  README.md  credits.bib  pyproject.toml  requirements.txt
docs/: draft.docx  draft.md  milestone 2.md
spot/: app.py  model.py
spot/firebase/: config.py
spot/templates/: dashboard.html  index.html  layout.html  profile.html  signin.html  signup.html  video.html
suraksha/: app.py  config.py
suraksha/data/: detection_classes.json  threat_detection_classes.json
suraksha/services/: chat.py  firebase.py
suraksha/templates/: dashboard.html  index.html  layout.html  profile.html  signin.html  signup.html  video.html
tests/: conftest.py
